<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F8E9"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TeamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TeamA" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/GoalKeeper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/team_a_foul"
                style="@style/FoulsKeeper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GoalKeeperA" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginLeft="@dimen/marginSides"
                android:layout_marginRight="@dimen/marginSides"
                android:onClick="goalForTeamA"
                android:text="@string/GoalA" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginLeft="@dimen/marginSides"
                android:layout_marginRight="@dimen/marginSides"
                android:onClick="foulForTeamA"
                android:text="@string/FoulA" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TeamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TeamB" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/GoalKeeper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GoalKeeperB" />

            <TextView
                android:id="@+id/team_b_foul"
                style="@style/FoulsKeeper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FoulKeeperB" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginLeft="@dimen/marginSides"
                android:layout_marginRight="@dimen/marginSides"
                android:onClick="setScoreTeamB"
                android:text="@string/GoalB" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginLeft="@dimen/marginSides"
                android:layout_marginRight="@dimen/marginSides"
                android:onClick="foulForTeamB"
                android:text="@string/FoulB" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        style="@style/NewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="newGame"
        android:text="@string/Reset" />

</RelativeLayout>
